force-app/main/default/objects/Instrument_Request__c/Instrument_Request__c.object-meta.xml
<CustomObject>
    <description>This object is being used for Instrument Tracking/Request Integration.</description>
    <label>Instrument Request</label>
    <nameField>
        <displayFormat>Inst-{00000}</displayFormat>
        <label>Instrument Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Instrument Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>