force-app/main/default/objects/Instrument_Request__c/fields/Actual_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Ship_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actual Ship Date Time</label>
    <type>DateTime</type>
</CustomField>