force-app/main/default/objects/Instrument_Request__c/fields/Actual_Ship_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Actual_Ship_Date_Only__c</fullName>
    <description>Converts the Actual Ship Date that is a Date/Time via integration and converts to a Date only field for display purposes</description>
    <formula>DateValue( Actual_Ship_Date__c )</formula>
    <label>Actual Ship Date</label>
    <type>Date</type>
</CustomField>