force-app/main/default/objects/Instrument_Request__c/fields/Approved_by_Committee_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Committee_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved by Committee Date Time</label>
    <type>DateTime</type>
</CustomField>