force-app/main/default/objects/Instrument_Request__c/fields/Approved_by_Committee_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Committee_Date_Only__c</fullName>
    <description>Converts the Approved by Committee Date that is a Date/Time via integration and converts to a Date only field for display purposes</description>
    <formula>DateValue( Approved_by_Committee_Date__c )</formula>
    <label>Approved by Committee Date</label>
    <type>Date</type>
</CustomField>