force-app/main/default/objects/Instrument_Request__c/fields/Approved_Qty__c.field-meta.xml
<CustomField>
    <fullName>Approved_Qty__c</fullName>
    <label>Approved Qty</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>