force-app/main/default/objects/Instrument_Request__c/fields/Created_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Only__c</fullName>
    <description>Converts the Custom Created Date that is a Date/Time via integration and converts to a Date only field for display purposes</description>
    <formula>DateValue( Created_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>