force-app/main/default/objects/Instrument_Request__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>