force-app/main/default/objects/Instrument_Request__c/fields/Kit__c.field-meta.xml
<CustomField>
    <fullName>Kit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>