force-app/main/default/objects/Instrument_Request__c/fields/Line_Item_Comments__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Line/Item Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>