force-app/main/default/objects/Instrument_Request__c/fields/Opportunity_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type_Name__c</fullName>
    <formula>Opportunity__r.RecordType.Name</formula>
    <label>Opportunity Record Type Name</label>
    <type>Text</type>
</CustomField>