force-app/main/default/objects/Instrument_Request__c/fields/RECOM__c.field-meta.xml
<CustomField>
    <fullName>RECOM__c</fullName>
    <label>RECOM</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>