force-app/main/default/objects/Instrument_Request__c/fields/Recommended_to_Committee_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommended_to_Committee_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recommended to Committee Date Time</label>
    <type>DateTime</type>
</CustomField>