force-app/main/default/objects/Instrument_Request__c/fields/Recommended_to_Committee_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Recommended_to_Committee_Date_Only__c</fullName>
    <description>Converts the Recommended to Committee Date that is a Date/Time via integration and converts to a Date only field for display purposes</description>
    <formula>DateValue(Recommended_to_Committee_Date__c)</formula>
    <label>Recommended to Committee Date</label>
    <type>Date</type>
</CustomField>