force-app/main/default/objects/Instrument_Request__c/fields/Scheduled_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Ship_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Ship Date Time</label>
    <type>DateTime</type>
</CustomField>