force-app/main/default/objects/Instrument_Request__c/fields/Scheduled_Ship_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Ship_Date_Only__c</fullName>
    <description>Converts the Scheduled Ship Date that is a Date/Time via integration and converts to a Date only field for display purposes</description>
    <formula>DateValue(Scheduled_Ship_Date__c )</formula>
    <label>Scheduled Ship Date</label>
    <type>Date</type>
</CustomField>