force-app/main/default/objects/Instrument_Request__c/fields/SNAP_KIT_ID__c.field-meta.xml
<CustomField>
    <fullName>SNAP_KIT_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>SNAP KIT ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>