force-app/main/default/objects/Instrument_Request__c/fields/SNAP_Kit_Nbr__c.field-meta.xml
<CustomField>
    <fullName>SNAP_Kit_Nbr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SNAP Kit Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>