force-app/main/default/objects/Instrument_Request__c/fields/Submitted_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date_Only__c</fullName>
    <description>Converts the Submitted Date that is a Date/Time via integration and converts to a Date only field for display purposes</description>
    <formula>DateValue( Submitted_Date__c )</formula>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>