force-app/main/default/objects/Instrument_Request__c/fields/Tray_Code__c.field-meta.xml
<CustomField>
    <fullName>Tray_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tray Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>