force-app/main/default/objects/Instrument_Request__c/listViews/Instrument_Requests_Hips.listView-meta.xml
<ListView>
    <fullName>Instrument_Requests_Hips</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity_Record_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>US Hip</value>
    </filters>
    <label>Instrument Requests - Hips</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>Segment_Marketing_Director_Hips_Cement</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>