force-app/main/default/objects/Instrument_Request__c/listViews/Instrument_Requests_Sports_Medicine.listView-meta.xml
<ListView>
    <fullName>Instrument_Requests_Sports_Medicine</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity_Record_Type_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>US Sports Medicine</value>
    </filters>
    <label>Instrument Requests-Sports Medicine</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>Segment_Marketing_Director_Sports_Medicine</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>